[package]
name = "roadmap"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", default-features = false, features = [
	"with-rocket",
] }
askama_rocket = "0.12.0"
dotenvy = "0.15.7"
rocket = "0.5.1"
serde = "1.0.208"
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = [
	"postgres",
	"runtime-tokio",
	"tls-native-tls",
	"uuid",
	"chrono",
	"json",
], default-features = false }
