[package]
name = "roadmap"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", default-features = false, features = [
	"with-rocket",
] }
askama_rocket = "0.12.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", default-features = false, features = [
	"sqlx_macros",
	"sqlx_postgres",
] }
serde = "1.0.208"
serde_json = "1.0.125"
sqlx = { version = "*", features = ["chrono"] }
